# orange-spectroscopy

./: .gitignore  .pre-commit-config.yaml  .tox.ini.swp  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint_workflow.yml  test.yml
conda/: meta.yaml
doc/: conf.py  pyproject.toml
doc/widgets/: peakfit.md
orangecontrib/spectroscopy/: __init__.py  data.py  irfft.py  util.py
orangecontrib/spectroscopy/io/: __init__.py  agilent.py  ascii.py  cls.py  diamond.py  envi.py  gsf.py  matlab.py  maxiv.py  meta.py  neaspec.py  omnic.py  opus.py  perkinelmer.py  ptir.py  soleil.py  util.py  wire.py
orangecontrib/spectroscopy/models/: pls.py
orangecontrib/spectroscopy/preprocess/: __init__.py  atm_corr.py  emsc.py  integrate.py  me_emsc.py  npfunc.py  transform.py  utils.py
orangecontrib/spectroscopy/preprocess/als/: __init__.py  baseline.py
orangecontrib/spectroscopy/tests/: bigdata.py  example_connect_settings.py  spectral_preprocess.py  test_als.py  test_atm_corr.py  test_conversion.py  test_cut.py  test_despike.py  test_editor_als.py  test_editor_atm_corr.py  test_editor_baseline.py  test_editor_cut.py  test_editor_emsc.py  test_editor_gaussian.py  test_editor_me_emsc.py  test_editor_normalize.py  test_editor_spikeremoval.py  test_emsc.py  test_integrate.py  test_interpolate.py  test_irfft.py  test_me_emsc.py  test_npfunc.py  test_owalignstack.py  test_owaverage.py  test_owbin.py  test_owcos.py  test_owfft.py  test_owhyper.py  test_owintegrate.py  test_owinterpolate.py  test_owmultifile.py  test_owpeakfit.py  test_owpls.py  test_owpolar.py  test_owpreprocess.py  test_owreshape.py  test_owsnr.py  test_owspectra.py  test_owspectralseries.py  (+11 more)
orangecontrib/spectroscopy/utils/: __init__.py  binning.py  pyproject.toml
orangecontrib/spectroscopy/widgets/: __init__.py  gui.py  line_geometry.py  owaverage.py  owbin.py  owcos.py  owfft.py  owhyper.py  owintegrate.py  owinterpolate.py  owmultifile.py  owoverlay.py  owpeakfit.py  owpls.py  owpolar.py  owpreprocess.py  owreshape.py  owsnr.py  owspectra.py  owspectralseries.py  owstackalign.py  owtilefile.py  peak_editors.py  peakfit_compute.py  utils.py  visual_settings.py
orangecontrib/spectroscopy/widgets/preprocessors/: __init__.py  als.py  atm_corr.py  (+10 more)
